the code that in webapp(java) is latest than webstorm content

--- a/TestNGWebApp/src/main/webapp/sampleLoadTestTree.html
+++ b/TestNGWebApp/src/main/webapp/sampleLoadTestTree.html
@@ -25,7 +25,8 @@
 <body>
 <div class="container">
     <div class="row">
-        <input type="file"/>
+        <input type="file" id="projectFileChooser" webkitdirectory directory style="display:block;height:0;width:0;"/>
+        <button id="btnFileChooser">select project</button>
     </div>
     <div class="row">
         <div class="demo col-lg-3">
@@ -38,8 +39,6 @@
         </div>
         <div class="demo col-lg-offset-2 col-lg-4">
             <h3>Test Inventory</h3>
-            <input type="text" id="search_test" value="" class="input"
-                   style="margin:0em auto 1em auto; display:block; padding:4px; border-radius:4px; border:1px solid silver;">
 
             <div id="jstree_test_inventory" class="inventory" style="margin-top: 1em; min-height: 200px;"></div>
         </div>
@@ -48,7 +47,14 @@
 
         var node;
         $(function () {
-
+            $('#btnFileChooser').click(function() {
+                $('#projectFileChooser').trigger('click');
+            });
+            $("input:file").change(function (){
+                console.log("ok i see");
+                var fileName = $(this).val();
+                alert(fileName);
+            });
             $('#jstree_scenario_builder')
                     .jstree(
                     {
@@ -103,11 +109,11 @@
                     .jstree(
                     {
                         "core": {
-                            "animation": 100,
+                            "animation": 200,
                             "check_callback": function (operation, node, node_parent, node_position, more) {
                                 // operation can be 'create_node', 'rename_node', 'delete_node', 'move_node' or 'copy_node'
                                 // in case of 'rename_node' node_position is filled with the new node name
-                                if (operation == "copy_node") {
+                                if(operation == "copy_node") {
 
                                 }
 //                                console.log("==== from jjstree_test_inventory ====")
@@ -143,7 +149,7 @@
                             },
                             "test_method_node": {
                                 "icon": "img/test.gif",
-                                "max_children": 0
+                                "max_children" : 0
                             }
 
                         },
@@ -172,18 +178,9 @@
 
 
                     });
-            var to = false;
-            $('#search_test').keyup(function () {
-                if (to) {
-                    clearTimeout(to);
-                }
-                to = setTimeout(function () {
-                    var v = $('#search_test').val();
-                    $('#jstree_test_inventory').jstree(true).search(v);
-                }, 250);
-            });
 
-        });
+        })
+        ;
     </script>
 </div>
 
