more tree reconfigure context menu

--- a/TestNGWebApp_webstorm/test.html
+++ b/TestNGWebApp_webstorm/test.html
@@ -4,12 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>jsTree</title>
 
-    <link rel="stylesheet"
-          href="http://static.jstree.com/3.0.2/assets/bootstrap/css/bootstrap.min.css"/>
-<!--     <link rel="stylesheet" -->
-<!--           href="jstree/themes/default/style.min.css"/> -->
-<!--            <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css" /> -->
-    <link rel="stylesheet" href="./assets/dist/themes/proton/style.css" />
+    <!--<link rel="stylesheet"-->
+          <!--href="jstree/themes/default/style.min.css"/>-->
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="./assets/dist/themes/proton/style.css"/>
 
 
     <script>
@@ -56,7 +54,7 @@
                     .jstree(
                     {
                         "core": {
-                        	"themes": {
+                            "themes": {
                                 'name': 'proton',
                                 'responsive': true
                             },
@@ -76,13 +74,17 @@
                             "data": {
                                 "text": "root",
                                 "type": "root",
-                                "children": [{
-                                    "text": "suite1",
-                                    "type": "suite_node",
-                                    "children": [{
-                                        "text": "test_container",
-                                        "type": "test_node"
-                                    }]}]
+                                "children": [
+                                    {
+                                        "text": "suite1",
+                                        "type": "suite_node",
+                                        "children": [
+                                            {
+                                                "text": "test_container",
+                                                "type": "test_node"
+                                            }
+                                        ]}
+                                ]
                             }
                         },
                         "dnd": {
@@ -101,6 +103,10 @@
                                 return drag;
                             }
                         },
+                        "checkbox" : {
+                            "tie_selection": false,
+                            "whole_node": false
+                        },
                         "types": {
                             "#": {
                                 "max_children": 1
@@ -117,18 +123,18 @@
                             },
                             "test_node": {
                                 "icon": "img/test.gif",
-                                "valid_children": [ "suite", "test_node","test_method_node" ]
+                                "valid_children": [ "suite", "test_node", "test_method_node" ]
                             },
                             "test_method_node": {
                                 "icon": "img/test.gif",
                                 "max_children": 0
                             }
                         },
-                        "plugins": [ "contextmenu", "dnd",
-                            "search", "state", "types","checkbox" ],
                         "contextmenu": {
                             "items": customMenu
-                        }
+                        },
+                        "plugins": [ "contextmenu", "dnd",
+                            "search", "state", "types", "checkbox" ]
 
                     });
 
@@ -137,7 +143,7 @@
                     .jstree(
                     {
                         "core": {
-                        	"themes": {
+                            "themes": {
                                 'name': 'proton',
                                 'responsive': true
                             },
@@ -157,7 +163,7 @@
 
                                 return more.is_multi;
 
-                            },                           
+                            },
                             'data': testInventoryData
                         },
                         "types": {
@@ -198,12 +204,10 @@
                                 return drag;
                             }
                         },
-                        "plugins": [ "contextmenu", "dnd",
+                        "plugins": [ "dnd",
                             "search", "state", "types"
-                        ],
-                        "contextmenu": {
-                            "items": customMenu
-                        }
+                        ]
+
 
 
                     });
@@ -227,7 +231,7 @@
 <script src="jstree/jstree.min.js"></script>
 <script src="js/consts.js"></script>
 
-<script src="js/main.js"></script>
+<script src="js/jstreeConfig.js"></script>
 <script>
     $.each($q, function (i, f) {
         $(f)
