--- a/TestNGWebApp_webstorm/index.html
+++ b/TestNGWebApp_webstorm/index.html
@@ -15,6 +15,8 @@
         window.$ = window.jQuery = function (a) {
             window.$q.push(a);
         };
+        ws1 = new WebSocket("ws://localhost:8080/WebSocketTestServlet");
+        ws1.is_open();
     </script>
     <link rel="alternate" type="application/rss+xml" title="RSS 2.0"
           href="/feed.xml"/>
