add my.properties to file

--- a/TestNGWebApp/src/main/webapp/test.html
+++ b/TestNGWebApp/src/main/webapp/test.html
@@ -40,6 +40,8 @@
         <div class="demo col-lg-offset-2 col-lg-4">
             <h3>Test Inventory</h3>
             <button onclick="refreshTestProject()">refresh</button>
+            <button onclick="expandAllTree('jstree_test_inventory')">expend all</button>
+            <button onclick="collapseAllTree('jstree_test_inventory')">collapse all</button>
             <input type="text" id="search_test" value="" class="input"
                    style="margin:0em auto 1em auto; display:block; padding:4px; border-radius:4px; border:1px solid silver;">
 
