--- a/TestNGWebApp/src/main/webapp/test.html
+++ b/TestNGWebApp/src/main/webapp/test.html
@@ -48,6 +48,24 @@
             <div id="jstree_test_inventory" class="inventory" style="margin-top: 1em; min-height: 200px;"></div>
         </div>
     </div>
+    <div class="row" id="params">
+     <form class="form-horizontal" id="params-form">
+<!--<fieldset>
+
+
+<legend>Parameters</legend>
+
+<div class="control-group">
+  <label class="control-label" for="textinput2">p1</label>
+  <div class="controls">
+    <input id="textinput2" name="textinput2" type="text" placeholder="p2 e.g" class="input-xlarge">
+    <p class="help-block">prameter desk here</p>
+  </div>
+</div>
+
+</fieldset>-->
+</form>
+    </div>
     <script>
 
         var node;
@@ -139,8 +157,23 @@
                         "plugins": [ "contextmenu", "dnd",
                             "search", "state", "types", "checkbox" ]
 
-                    });
-
+                    }).bind("select_node.jstree", function(event, data) {
+                    	console.log(data.node.id);
+                    	console.log(data.node.li_attr.params[0]);
+                    	console.log(data.node.li_attr.params[1]);
+                    	$("#params-form").empty();
+                    	$("#params-form").append("<fieldset><legend>Parameters</legend>");
+                    	
+                    	$.each(data.node.li_attr.params, function( index, value ) {
+  							$("#params-form").append('<div class="control-group">' 
+  								+ '<label class="control-label"' + ' for="' + value + '">' + value + '</label>'
+  									+ '<div class="controls">'
+  										+ '<input id="' + value + '"' + ' name="' + value + '"' + ' placeholder="e.g ..."' + ' class="input-xlarge">'
+  												+ ' <p class="help-block">prameter desk here</p></div></div></fieldset>'); 
+						});
+                    	$("#params-form").append('<div class="control-group">'
+                    		+ '<div class="controls">' + '<button id="' + data.node.id + '"' + ' class="btn btn-primary">Save</button></div></div>');
+                    });;
 
             $('#jstree_test_inventory')
                     .jstree(
