miled stone - working example

--- a/TestNGWebApp/src/main/webapp/test.html
+++ b/TestNGWebApp/src/main/webapp/test.html
@@ -172,7 +172,7 @@
   												+ ' <p class="help-block">prameter desk here</p></div></div></fieldset>'); 
 						});
                     	$("#params-form").append('<div class="control-group">'
-                    		+ '<div class="controls">' + '<button onclick="saveParamsForTest()"' + ' id="' + data.node.id + '"' + ' class="btn btn-primary btn-save-params">Save</button></div></div>');
+                    		+ '<div class="controls">' + '<button type="button"' + ' onclick="saveParamsForTest()"' + ' id="' + data.node.id + '"' + ' class="btn btn-primary btn-save-params">Save</button></div></div>');
                     });;
 
             $('#jstree_test_inventory')
