--- a/TestNGWebApp/src/main/webapp/test.html
+++ b/TestNGWebApp/src/main/webapp/test.html
@@ -113,6 +113,7 @@
                         },
                         "checkbox" : {
                             "tie_selection": false,
+                            "three_state": false,
                             "whole_node": false
                         },
                         "types": {
@@ -166,7 +167,7 @@
 						});
                     	$("#params-form").append('<div class="control-group">'
                     		+ '<div class="controls">' + '<button type="button"' + ' onclick="saveParamsForTest()"' + ' id="' + data.node.id + '"' + ' class="btn btn-primary btn-save-params">Save</button></div></div>');
-                    });;
+                    });
 
             $('#jstree_test_inventory')
                     .jstree(
